force-app/main/default/objects/ErrorLog__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <description>Name of the class where the error occured.</description>
    <label>ClassName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>