force-app/main/default/objects/ErrorLog__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Logging level (e.g., ERROR, INFO).</description>
    <label>Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>