force-app/main/default/objects/ErrorLog__c/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <description>Name of the method where the error occurred.</description>
    <label>MethodName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>